test/errors/png-invalid/png-invalid.rom
Error in `png-invalid.asm` on line 1: `png-invalid.txt` is not a PNG
